--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "quizgame",
+  "name": "quiz-game",
   "version": "1.0.0",
-  "description": "This is a fully functional Quiz App designed to sharpen your *Core Web Development Skills* using *Vanilla JavaScript, **Flexbox, **Animations, and **APIs*. It loads dynamic trivia questions from [Open Trivia DB](https://opentdb.com), tracks high scores, and includes a visual progress bar and feedback system.",
-  "main": "index.js",
+  "description": "A fully functional Quiz App to test and improve your core web development skills.",
+  "private": true,
+  "homepage": "https://sreoshh.github.io/Quiz-Game",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy": "echo No build step needed",
+    "deploy": "gh-pages -d 'Quiz App Master'"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sreoshh/Quiz App Master.git"
+    "url": "https://github.com/Sreoshh/Quiz-Game.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sreoshh/Quiz-Game/issues"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Sreoshh/Quiz App Master/issues"
-  },
-  "homepage": "https://github.com/Sreoshh/Quiz App Master#readme",
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
